objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <picklist>
            <picklistValues>
                <fullName>Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van/Minivan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wagon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ariel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campagna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citroen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elfin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gumpert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invicta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <picklist>
            <picklistValues>
                <fullName>Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alloy Wheels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM/FM Stereo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>and Cup Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-lock Brakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Climate Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aux Audio Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucket Seats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center Armrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Disc Changer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fog/Driving Lamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fold Down Rear Seat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyless Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather/Leatherette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather Wrapped Steering Wheel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3 Ready Stereo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Door Locks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Mirrors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Defroster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Wiper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Wheel Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tachometer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telescoping Column</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tilt Steering Wheel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traction Control</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fuel_type__c</fullName>
        <label>Fuel type</label>
        <picklist>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electirc Hybrid - Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric - Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Hybrid - Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasoline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Model__c</columns>
        <columns>Body_Style__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Car Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>